fixes for eclipselink